@@ -25,7 +25,7 @@ repository.type   = git
 [Prereq]
 autodie                     = 0
 namespace::autoclean        = 0
-Log::Contextual             = 0.00202
+Log::Contextual             = 0.00300
 File::Path                  = 2.08
 File::Touch                 = 0.08
 DBIx::Class                 = 0.08121
